luffy/k8s/cluster/dev/service-luffy.yaml
apiVersion: v1
kind: Service
metadata:
  name: luffy-service
  namespace: sunny
spec:
  selector:
    app: luffy
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30008
