luffy/k8s/cluster/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: luffy-service
spec:
  selector:
    app: luffy
  #type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30008
