luffy/k8s/cluster/dev/nginx-ingress-app-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luffy-ingress
  namespace: sunny
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/auth-secret: username
  #   nginx.ingress.kubernetes.io/auth-secret-type: password
spec:
  ingressClassName: nginx
  # criar um handler para rotas não existentes.
  # defaultBackend:
  #   service:
  #     name: error
  #     port:
  #       name: svc-port
  rules:
    - host: apis.chapahals.com
      http:
          paths:
          - path: /v1/version
            pathType: Prefix
            backend:
              service:
                name: luffy-service
                port:
                  name: luffy-svc-port
  # tls:
  #   - hosts:
  #       - apis.chapahals.com
  #     secretName: apis.chapahals.com-tls

  # https://kubernetes.github.io/ingress-nginx/user-guide/tls/

  # we need to generate a self-signed certificate
    # openssl req -x509 -nodes -days 9999 -newkey rsa:2048 -keyout ingress-tls.key -out ingress-tls.crt
  
  # or we can  generate a  Certificate Signing Request
    # openssl req -new -newkey rsa:2048 -nodes -keyout apis.chapahals.com.key -out apis.chapahals.com.csr
