luffy/k8s/cluster/dev/nginx-ingress-app-using-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luffy-ingress-host
  namespace: sunny
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/auth-secret: username
  #   nginx.ingress.kubernetes.io/auth-secret-type: password
spec:
  ingressClassName: nginx
  rules:
  - host: apis.chapahals.com
    http:
      paths:
      - path: /v1/version
        pathType: Prefix
        backend:
          service:
            name: luffy-service
            port:
              name: luffy-svc-port
