luffy/k8s/cluster/dev/nginx-ingress-sonar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/auth-secret: username
  #   nginx.ingress.kubernetes.io/auth-secret-type: password
spec:
  ingressClassName: nginx
  # criar um handler para rotas não existentes.
  # defaultBackend:
  #   service:
  #     name: error
  #     port:
  #       name: svc-port
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sonarqube-sonarqube
              port: 
               number: 9000
