luffy/k8s/cluster/dev/nginx-ingressa-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luffy-ingress
  namespace: sunny
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/auth-secret: username
  #   nginx.ingress.kubernetes.io/auth-secret-type: password
spec:
  ingressClassName: nginx
  # criar um handler para rotas não existentes.
  # defaultBackend:
  #   service:
  #     name: error
  #     port:
  #       name: svc-port
  rules:
    # - host: apis.chapahals.com
    - http:
        paths:
        - path: /v1/version
          pathType: Prefix
          backend:
            service:
              name: luffy-service
              port:
                name: luffy-svc-port
